# Kalkulator_c--_Oblig1

./: .gitignore  CMakeLists.txt  main.cpp
